--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
     "cSpell.words": [
-        "Avenir"
+        "appspot",
+        "Avenir",
+        "credentails",
+        "Edbv",
+        "firebaseapp",
+        "firestore",
+        "PCHJE",
+        "signup",
+        "toastify"
     ]
 }
