--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-apple-login": "^1.1.6",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
     "react-router-dom": "^6.10.0",
+    "react-toastify": "^9.1.2",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
