--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^9.19.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-apple-login": "^1.1.6",
     "react-dom": "^18.2.0",
