--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "antd": "^5.4.2",
     "firebase": "^9.19.1",
-    "localforage": "^1.10.0",
+    "http": "^0.0.1-security",
     "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
