profile pic features added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "antd",
         "appspot",
         "Avenir",
+        "Bytest",
         "credentails",
         "Edbv",
         "firebaseapp",
